# buildtrackbackend

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  services.json  test_emails.py  test_templates.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_dynamic_workflows_rbac_settings.py  003_workflow_runtime_invitations_approvals.py  004_nullable_member_user_id.py  005_seed_permissions_and_roles.py  006_v2_brief_alignment.py  007_documents_site_visits_verification.py  008_subscription_payments.py  009_notifications.py  010_stage_requirements.py  011_project_subscriptions.py  012_milestone_date_locking.py  013_project_units.py  014_buyer_location_last_active.py  015_notification_sent_at.py  0957423bbcec_add_emailverificationcode.py  7c981a79f455_add_emailverificationcode.py
app/: main.py
app/core/: config.py  database.py  deps.py  exceptions.py  logging.py  middleware.py  security.py
app/modules/admin/: models.py  router.py  schemas.py  service.py
app/modules/auth/: models.py  router.py  schemas.py  service.py
app/modules/billing/: models.py  router.py  schemas.py  service.py
app/modules/buyers/: models.py  router.py  schemas.py  service.py
app/shared/: audit.py  code_gen.py  email.py  geo.py  ids.py  ipgeo.py  quotas.py  request_context.py  response.py  settings.py  storage.py
scripts/: cleanup_projects.py  create_admin.py  fix_tier_limits.py  seed_client.py  seed_demo.py  seed_dev.py  test_emails.py  trigger_emails.py
tests/integration/: results.md  test_full_role_flows.py
(+73 files in other folders)
