[project]
name = "buildtrack-backend"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "argon2-cffi==23.1.0",
    "python-jose[cryptography]==3.3.0",
    "structlog==24.4.0",
    "httpx==0.27.2",
    "cloudinary==1.41.0",
    "exifread==3.0.0",
    "slowapi==0.1.9",
    "uuid6==2024.7.10",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "geoalchemy2==0.15.2",
    "psycopg2-binary==2.9.9",
    "resend==2.4.0",
    "email-validator==2.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
